--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,25 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Analizador de texto</title>
+  <title>Analizador de texto </title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <script src="index.js" type="module"></script>
+  <h1> Analizador de Texto</h1>
+  <textarea name="user-input"> Ingrese Texto aqui. </textarea>
+  <ul>
+    <li data-testid="word-count"> Recuento de palabras:</li>
+    <li data-testid="character-count"> Recuento de caracteres:</li>
+    <li data-testid="character-no-spaces-count"> Recuento de caracteres excluyendo espacios y signos de puntuación:</li>
+    <li data-testid="number-count"> Recuento de números:</li>
+    <li data-testid="number-sum">Suma de números:</li>
+    <li data-testid="word-length-average">Longitud media de palabras:</li>
+  </ul>
 </body>
+<footer> 
+  <p1> By Emma Linares</p1>
+</footer>
+<button id="reset-button"> Limpiar</buttonid>
 </html>
