--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <title>Analizador de texto </title>
   <link rel="stylesheet" href="style.css" />
+  <script defer src="index.js" type="module"></script>
 </head>
 
 <body>
-  <script src="index.js" type="module"></script>
   <h1> Analizador de Texto</h1>
-  <textarea name="user-input"> Ingrese Texto aqui. </textarea>
+  <textarea name="userinput"> Ingrese Texto aqui. </textarea>
   <ul>
     <li data-testid="word-count"> Recuento de palabras:</li>
     <li data-testid="character-count"> Recuento de caracteres:</li>
@@ -23,5 +23,5 @@
 <footer> 
   <p1> By Emma Linares</p1>
 </footer>
-<button id="reset-button"> Limpiar</buttonid>
+<button id="resetbutton"> Analizar </buttonid>
 </html>
