--- a/src/index.html
+++ b/src/index.html
@@ -10,18 +10,18 @@
 
 <body>
   <h1> Analizador de Texto</h1>
-  <textarea name="userinput"> Ingrese Texto aqui. </textarea>
+  <textarea name="user-input" placeholder="Ingrese Texto aqui."></textarea>
   <ul>
-    <li data-testid="word-count"> Recuento de palabras:</li>
-    <li data-testid="character-count"> Recuento de caracteres:</li>
-    <li data-testid="character-no-spaces-count"> Recuento de caracteres excluyendo espacios y signos de puntuación:</li>
-    <li data-testid="number-count"> Recuento de números:</li>
-    <li data-testid="number-sum">Suma de números:</li>
-    <li data-testid="word-length-average">Longitud media de palabras:</li>
+    <li class="show-result" data-testid="word-count">Recuento de palabras:</li>
+    <li class="show-result" data-testid="character-count">Recuento de caracteres:</li>
+    <li class="show-result" data-testid="character-no-spaces-count">Recuento de caracteres excluyendo espacios:</li>
+    <li class="show-result" data-testid="number-count">Recuento de números:</li>
+    <li class="show-result" data-testid="number-sum">Suma de números:</li>
+    <li class="show-result" data-testid="word-length-average">Longitud media de palabras:</li>
   </ul>
 </body>
 <footer> 
   <p1> By Emma Linares</p1>
 </footer>
-<button id="resetbutton"> Analizar </buttonid>
+<button id="reset-button"> Limpiar </buttonid>
 </html>
