--- a/src/index.html
+++ b/src/index.html
@@ -12,16 +12,19 @@
   <h1> Analizador de Texto</h1>
   <textarea name="user-input" placeholder="Ingrese Texto aqui."></textarea>
   <ul>
-    <li class="show-result" data-testid="word-count">Recuento de palabras:</li>
-    <li class="show-result" data-testid="character-count">Recuento de caracteres:</li>
-    <li class="show-result" data-testid="character-no-spaces-count">Recuento de caracteres excluyendo espacios:</li>
-    <li class="show-result" data-testid="number-count">Recuento de números:</li>
-    <li class="show-result" data-testid="number-sum">Suma de números:</li>
-    <li class="show-result" data-testid="word-length-average">Longitud media de palabras:</li>
+    <li class="result" data-testid="word-count">Palabras:</li>
+    <li class="result" data-testid="char-count">Caracteres:</li>
+    <li class="result" data-testid="char-no-spaces-count">Espacios:</li>
+    <li class="result" data-testid="agv-word-length">Longitud:</li>
+    <li class="result" data-testid="num-count">Números:</li>
+    <li class="result" data-testid="num-sum">Sumatoria:</li>
+   
   </ul>
 </body>
+<button id="reset-button"> Limpiar </button>
 <footer> 
-  <p1> By Emma Linares</p1>
+  <p1> Made by Emma Linares</p1>
 </footer>
-<button id="reset-button"> Limpiar </buttonid>
+
+
 </html>
