Cambios Finales-Lo-Lograste

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,14 @@
   <meta charset="utf-8">
   <title>Analizador de texto </title>
   <link rel="stylesheet" href="style.css" />
-  <script defer src="index.js" type="module"></script>
+  
 </head>
 
 <body>
-  <h1> Analizador de Texto</h1>
-  <textarea name="user-input" placeholder="Ingrese Texto aqui."></textarea>
+  <header>
+    <h1> Analizador de Texto</h1>
+  </header>
+  <textarea name="user-input" placeholder="Ingrese Texto aqui..."></textarea>
   <ul>
     <li class="result" data-testid="word-count">Palabras:</li>
     <li class="result" data-testid="char-count">Caracteres:</li>
@@ -22,9 +24,12 @@
   </ul>
 </body>
 <button id="reset-button"> Limpiar </button>
-<footer> 
-  <p1> Made by Emma Linares</p1>
-</footer>
 
+<footer> 
+<em>
+  <p1> Made by Emma Linares</p1>
+</em>
+</footer>
+<script  src="index.js" type="module"></script>
 
 </html>
