--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,28 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <title>Analizador de texto </title>
   <link rel="stylesheet" href="style.css" />
   
 </head>
-
 <body>
   <header>
-    <h1> Analizador de Texto</h1>
+    <h1>Analizador de Texto</h1>
   </header>
   <textarea name="user-input" placeholder="Ingrese Texto aqui..."></textarea>
+  <div name="box">
   <ul>
     <li class="result" data-testid="word-count">Palabras:</li>
     <li class="result" data-testid="char-count">Caracteres:</li>
     <li class="result" data-testid="char-no-spaces-count">Espacios:</li>
     <li class="result" data-testid="agv-word-length">Longitud:</li>
     <li class="result" data-testid="num-count">Números:</li>
-    <li class="result" data-testid="num-sum">Sumatoria:</li>
-   
+    <li class="result" data-testid="num-sum">Sumatoria:</li> 
   </ul>
-</body>
-<button id="reset-button"> Limpiar </button>
-
-<footer> 
-<em>
-  <p1> Made by Emma Linares</p1>
-</em>
-</footer>
+</div>
+<button id="reset-button">Limpiar </button>
+<footer><p>Made by Emma Linares</p></footer>
 <script  src="index.js" type="module"></script>
-
+</body>
 </html>
