Cambios Finales-Ahora si lo lograste

--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,16 @@
   <textarea name="user-input" placeholder="Ingrese Texto aqui..."></textarea>
   <div name="box">
   <ul>
-    <li class="result" data-testid="word-count">Palabras:</li>
-    <li class="result" data-testid="char-count">Caracteres:</li>
-    <li class="result" data-testid="char-no-spaces-count">Espacios:</li>
-    <li class="result" data-testid="agv-word-length">Longitud:</li>
-    <li class="result" data-testid="num-count">Números:</li>
-    <li class="result" data-testid="num-sum">Sumatoria:</li> 
+    <li data-testid="word-count" class="result"></li>
+    <li data-testid="char-count" class="result"></li>
+    <li data-testid="char-no-spaces-count" class="result"></li>
+    <li data-testid="agv-word-length" class="result"></li>
+    <li data-testid="num-count" class="result"></li>
+    <li data-testid="num-sum" class="result"></li> 
   </ul>
 </div>
 <button id="reset-button">Limpiar </button>
 <footer><p>Made by Emma Linares</p></footer>
-<script  src="index.js" type="module"></script>
+<script src="index.js" type="module"></script>
 </body>
 </html>
