--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,11 @@
   <div name="box">
   <ul>
     <li data-testid="word-count" class="result"></li>
-    <li data-testid="char-count" class="result"></li>
-    <li data-testid="char-no-spaces-count" class="result"></li>
-    <li data-testid="agv-word-length" class="result"></li>
-    <li data-testid="num-count" class="result"></li>
-    <li data-testid="num-sum" class="result"></li> 
+    <li data-testid="character-count" class="result"></li>
+    <li data-testid="character-no-spaces-count" class="result"></li>
+    <li data-testid="word-length-average" class="result"></li>
+    <li data-testid="number-count" class="result"></li>
+    <li data-testid="number-sum" class="result"></li> 
   </ul>
 </div>
 <button id="reset-button">Limpiar </button>
